<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="toChapterEnd"
        android:summary="@string/pref_summary_to_chapter_end"
        android:title="@string/pref_title_to_chapter_end">
    </CheckBoxPreference>
    <ListPreference
        android:key="rewindRight"
        android:entries="@array/pref_entries_rewind"
        android:entryValues="@array/pref_valies_rewind"
        android:title="@string/pref_rewind_right"
        android:dialogTitle="@string/pref_rewind_right"
        android:summary="%s"
        android:defaultValue="@string/pref_value_rewind_default">
    </ListPreference>
    <ListPreference
        android:key="rewindLeft"
        android:title="@string/pref_rewind_left"
        android:dialogTitle="@string/pref_rewind_left"
        android:entries="@array/pref_entries_rewind"
        android:entryValues="@array/pref_valies_rewind"
        android:defaultValue="@string/pref_value_rewind_default"
        android:summary="%s">
    </ListPreference>
    <ListPreference
        android:key="rewindAuto"
        android:title="@string/pref_rewind_auto"
        android:dialogTitle="@string/pref_rewind_auto"
        android:entries="@array/pref_entries_autorewind"
        android:entryValues="@array/pref_valies_autorewind"
        android:defaultValue="@string/pref_value_autorewind_default"
        android:summary="%s">
    </ListPreference>
    <ListPreference
        android:key="remainTime"
        android:title="@string/pref_remain_title"
        android:summary="%s"
        android:entries="@array/pref_entries_remain"
        android:entryValues="@array/pref_valies_remain"
        android:defaultValue="@string/pref_value_remain_default"
        android:dialogTitle="@string/pref_remain_title"/>
    <SwitchPreference
        android:key="bookscaleSwitch"
        android:title="@string/pref_bookscale_switch"
        android:defaultValue="true"/>
    <Preference
        android:key="rootFolder"
        android:title="@string/pref_root_folder"
        android:summary="%s"/>
</PreferenceScreen>