<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/contextmenu_lastbooks_change"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always|withText"
        android:title="@string/contextmenu_bookmarks_change" />
    <item
        android:id="@+id/contextmenu_lastbooks_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"
        android:title="@string/contextmenu_bookmarks_delete"/>
    <item
        android:id="@+id/contextmenu_lastbooks_bookmarks"
        app:showAsAction="never"
        android:title="@string/contextmenu_lastbooks_bookmarks"/>
    <item
        android:id="@+id/contextmenu_lastbooks_picture"
        app:showAsAction="never"
        android:title="@string/contextmenu_lastbooks_image"/>
    <item
        android:id="@+id/contextmenu_lastbooks_null_progress"
        app:showAsAction="never"
        android:title="@string/contextmenu_lastbooks_null_progress"/>
</menu>