<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpCreditsFragment">

    <ScrollView
        android:id="@+id/creditScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/helpLogoImage"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_snail_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/helpAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/help_app_name"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpLogoImage" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/helpVersionTint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/help_version"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/helpAppName" />

            <TextView
                android:id="@+id/helpVersionNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/helpAppName" />

            <TextView
                android:id="@+id/helpAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/help_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpVersionTint" />

            <Button
                android:id="@+id/helpMailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/help_mail_button"
                android:theme="@style/FlatButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpAuthor" />

            <TextView
                android:id="@+id/helpSupport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="@string/help_support"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpMailButton" />

            <Button
                android:id="@+id/helpStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/FlatButton"
                android:text="@string/help_stars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpSupport" />

            <TextView
                android:id="@+id/helpInstructionsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/help_instructions_header"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpStars" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpInstructionsHeader">

                <TextView
                    android:id="@+id/helpBarTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/help_instructions_bar"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/helpChapterTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/help_instructions_chapter"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/helpRewindTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/help_instructions_rewind"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/helpLastbooksTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/help_instructions_lastbooks"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/helpBookmarksTip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/help_instructions_bookmarks"
                    android:textStyle="italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/helpPreviewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/help_preview_header"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpPreviewHeader">

                <TextView
                    android:id="@+id/previewTip1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/preview_optim"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/previewTip2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/preview_artifacts"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/previewTip3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/ic_label_outline_24dp"
                    android:text="@string/preview_themes"
                    android:textStyle="italic" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>